# mcode

./: .gitignore  AGENTS.md  CODE_LOCATIONS_SUMMARY.md  CODE_SEARCH_RESULTS_INDEX.md  DETAILED_CODE_REFERENCES.md  QUICK_REFERENCE.md  README_CODE_DOCUMENTATION.md  package-lock.json  package.json
mcode-desktop/src-tauri/: Cargo.toml  tauri.conf.json
mcode-desktop/src-tauri/capabilities/: default.json
mcode-desktop/src-tauri/src/: app_state.rs  commands.rs  folders.rs  health.rs  lib.rs  main.rs  pairing.rs  recovery.rs  tray.rs
mcode-desktop/src-tauri/src/bridge/: events.rs  http.rs  mod.rs
mcode-desktop/src-tauri/src/gateway/: mod.rs  upstream.rs
mcode-desktop/src-tauri/src/runtime/: claude_cli.rs  codex_cli.rs  events.rs  json_rpc.rs  mod.rs  process_stdio.rs
mcode-desktop/src-tauri/src/tunnel/: mod.rs
mcode-desktop/src-tauri/tests/: capabilities.rs  desktop_p10_upstream_hardening.rs  desktop_p14_cli_streaming.rs  desktop_p15_cli_interactions.rs  desktop_p16_codex_app_server.rs  desktop_p16_jsonrpc.rs  desktop_p17_codex_app_server_session_reuse.rs  desktop_p18_claude_cli_streaming.rs  desktop_p19_outbound_queue.rs  desktop_p19_recovery_snapshot.rs  desktop_p22_multi_client_session.rs  desktop_p23_active_turn_control.rs  desktop_p24_prompt_queue.rs  desktop_p28_official_cli_completion.rs  desktop_p29_shared_queue_priority.rs  desktop_p30_folder_projects.rs  desktop_p3_runtime.rs  desktop_p4_http_tunnel.rs  desktop_p5_cli_adapters.rs  desktop_p7_tcp_tunnel.rs  desktop_p8_cli_sessions.rs  desktop_p9_cli_events.rs  tunnel_bindings.rs  upstream_registration.rs
(+785 files in other folders)
