[package]
name = "mcode-desktop"
version = "0.1.0"
description = "MCode desktop bridge and gateway host"
authors = ["MCode"]
edition = "2021"
default-run = "mcode-desktop"

[lib]
name = "mcode_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mcode-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
